--- a/assets/style.css
+++ b/assets/style.css
@@ -1,31 +1,84 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-body{
-    margin-top: 100PX;
-     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+h2{
+    font-size: 19px;
+}
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
-.container{
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-extralight-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.poppins-light-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+.container {
+  max-width: 576px;
+  height: 100vh;
+  display: grid;
+  grid-template-areas: 
+          "header"
+          "navbar"
+          "main"
+          "footer";
+          ;
+}
+.header {
+  background-color: rgb(220, 236, 255);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+.aside {
+  background-color: rgb(223, 223, 223);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+.aside_title{
+    padding: 10px;
+}
+.aside_info{
+    background-color: white;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 500px;
-    height: 400px;
-    background-color: aqua;
-}
-img{
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    
-}
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    padding: 5px 20px 5px 20px;
+    border-radius: 5px;
+
 }
