--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,8 @@
   font-weight: 400;
   font-style: normal;
 }
-h2{
-    font-size: 19px;
+h2 {
+  font-size: 19px;
 }
 .poppins-regular {
   font-family: "Poppins", sans-serif;
@@ -48,37 +48,101 @@ h2{
   max-width: 576px;
   height: 100vh;
   display: grid;
-  grid-template-areas: 
-          "header"
-          "navbar"
-          "main"
-          "footer";
-          ;
+  grid-template-areas:
+    "header"
+    "aside"
+    "main"
+    "footer";
 }
+
 .header {
+  grid-area: "header";
   background-color: rgb(220, 236, 255);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 150px;
   padding: 20px;
 }
 .aside {
+  grid-area: "aside";
   background-color: rgb(223, 223, 223);
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+  height: 100px;
   padding: 10px;
 }
-.aside_title{
-    padding: 10px;
+.aside_title {
+  padding: 10px;
 }
-.aside_info{
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 80%;
-    padding: 5px 20px 5px 20px;
-    border-radius: 5px;
-
+.aside_info {
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 80%;
+  padding: 5px 20px 5px 20px;
+  border-radius: 5px;
+}
+.main {
+  grid-area: "main";
+  background-color: rgb(255, 255, 255);
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.card {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  width: 80%;
+  height: 60vh;
+  margin: 0 auto;
+  border: 1px solid #f3f5eb;
+  text-align: center;
+  box-shadow: 0px 5px 5px 0px rgb(230, 230, 230);
+  font-size: medium;
+  padding-bottom: 10px;
+}
+.card_img {
+  width: 60%;
+  height: 60vh;
+}
+.card_title {
+  font-size: 20px;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+button {
+  width: 100px;
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 15px 5px 15px;
+  background-color: rgb(17, 17, 17);
+  color: rgb(255, 255, 255);
+  font-size: medium;
+  cursor: pointer;
+}
+.card_item {
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
+  border: 1px 1px 1px 1px solid black;
+}
+.footer {
+  grid-area: "footer";
+  background-color: rgb(224, 60, 60);
+  height: 100px;
 }
